--- a/app/src/main/res/layout/activity_bluetooth.xml
+++ b/app/src/main/res/layout/activity_bluetooth.xml
@@ -1,22 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginTop="@dimen/edge_margin"
+    android:layout_marginLeft="@dimen/edge_margin"
+    android:layout_marginRight="@dimen/edge_margin"
+    android:layout_marginBottom="@dimen/edge_margin"
     android:orientation="vertical">
 
     <Button
+        android:id="@+id/choose_child_devices"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/chooseChildDevicesButton"
-        android:onClick="chooseChildDevices"/>
+        android:onClick="chooseChildDevices"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/edge_margin"
         android:text="@string/chooseMasterDeviceButton"
-        android:onClick="chooseMasterDevice"/>
+        android:onClick="chooseMasterDevice"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/choose_child_devices" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
